fix alignment of the input fields of a business rule action

--- a/src/EUREKA/G6KBundle/Resources/public/admin/css/business-rules.css
+++ b/src/EUREKA/G6KBundle/Resources/public/admin/css/business-rules.css
@@ -58,7 +58,7 @@
 }
 
 #business-rules .action .subfields, #business-rules .action .subfields .field {
-	display: inline-block;
+	display: inline;
 }
 
 #business-rules .action select, #business-rules .action input, #business-rules .action textarea {
